@@ -1,3 +1,9 @@
+2013-08-20  Alan Modra  <amodra@gmail.com>
+
+	* floatformat.c (floatformat_ibm_long_double): Rename to..
+	(floatformat_ibm_long_double_big): ..this.
+	(floatformat_ibm_long_double_little): New.
+
 2013-07-09  Tristan Gingold  <gingold@adacore.com>
 
 	* makefile.vms (OBJS): Add dwarfnames.obj
